Fail pipeline if stash doesn't exists